syntax = "proto3";
package quicksilver.claimsmanager.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/ingenuity-build/quicksilver/x/claimsmanager/types";

enum ClaimType {
  option (gogoproto.goproto_enum_prefix) = false;

  // Undefined action (per protobuf spec)
  ClaimTypeUndefined = 0;
  ClaimTypeLiquidToken = 1;
	ClaimTypeOsmosisPool = 2;
	ClaimTypeCrescentPool = 3;
	ClaimTypeSifchainPool = 4;
}

// Params holds parameters for the claimsmanager module.
message Params {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
}

// Claim define the users claim for holding assets within a given zone.
message Claim {
  option (gogoproto.goproto_getters) = false;
  
  string user_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string chain_id = 2;
  ClaimType module = 3;
  string source_chain_id = 4;
  uint64 amount = 5;
}
